--- a/pagina web 90s gabrielgarcialamela.html
+++ b/pagina web 90s gabrielgarcialamela.html
@@ -92,5 +92,69 @@ En 2005, el por aquel entonces director ejecutivo de Nissan,<a href="https://es.
 </tr>
 </table>
 
+<!DOCTYPE html>
+<html lang="es">
+	<head>
+		<meta charset="UTF-8">
+	</head>
+<body>
+<h1>HTML FORM</h1>
+
+<form>
+	<fieldset>
+		<legend>Formulario</legend>
+
+<form action="" method="">
+  <label for="fname">Nombre:</label> 
+    <input type="text" id="fname" name="fname">
+   <br><br>
+  <label for="fapelidos">Apellidos:</label>
+    <input type="text" id="fapelido" name="fname">
+    <br><br>
+   <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+    <br><br>
+  <label for="fpassword">Password:</label>
+    <input type="password" id="pwd" name="pwd">
+  <br><br>
+   <label for="frepitpassword">Repit Password:</label>
+    <input type="Password" id="fpassword" name="Password">
+  <br><br>
+   <label for="tel">Teléfono:</label>
+    <input type="tel" id="phone" name="phone">
+  <br><br>
+   <label for="web">Web:</label>
+    <input type="url" id="homepage" name="homepage">
+  <br><br>
+   <label for="cm">Altura:</label>
+    <input type="cm" id="cm" name="cm">
+  <br><br>
+   <label for="Date">Fecha de nacimiento:</label>
+    <input type="date" id="fdate" name="date">
+  <br><br>
+  <label>Género:</label>
+  <br>Hombre
+  <input type="checkbox" id="Hombre" name="Hombre">
+  <br>Mujer
+    <input type="checkbox" id="Mujer" name="Mujer">
+  <br><br>
+  <label>Color favorito:</label>
+  <input type="text" id="fname" name="fname">
+  <br><br>
+  <input type="checkbox" id="Hombre" name="Hombre">
+  <label>Accept terms and conditions</label>
+  <br><br>
+  <input type="button" value="Enviar" onclick="alerta('Los datos fueron enviados correctamente')">
+  <br><br>
+  
+  
+		
+	</body>
+</html>
+
+
+
+
+		
 	</body>
 </html>
