Update pagina web 90s gabrielgarcialamela.html

--- a/pagina web 90s gabrielgarcialamela.html
+++ b/pagina web 90s gabrielgarcialamela.html
@@ -146,15 +146,6 @@ En 2005, el por aquel entonces director ejecutivo de Nissan,<a href="https://es.
   <br><br>
   <input type="button" value="Enviar" onclick="alerta('Los datos fueron enviados correctamente')">
   <br><br>
-  
-  
-		
-	</body>
-</html>
-
-
-
-
-		
+</form>		
 	</body>
 </html>
