--- a/pagina2.html
+++ b/pagina2.html
@@ -2,6 +2,7 @@
 <html lang="es">
 	<head>
 		 <meta charset="UTF-8">
+ <link rel="stylesheet" href="traballofinal2.css">
 	</head>
 	<body>
 <h1> Tracción cuatro ruedas</h1>
